--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@tabler/icons-react": "^3.17.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.441.0",
     "next": "14.1.1",
     "postcss": "8.4.31",
@@ -27,6 +30,7 @@
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "replicate": "^0.12.3",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
   },
