--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@types/react-dom": "18.2.5",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.441.0",
+    "mongodb": "^6.9.0",
     "next": "14.1.1",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
+    "@types/next-auth": "^3.13.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "prettier": "^2.8.8",
