--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.6.3",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "postcss": "8.4.31",
