--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@stripe/stripe-js": "^4.5.0",
     "@tabler/icons-react": "^3.17.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
@@ -37,6 +38,7 @@
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "replicate": "^0.12.3",
+    "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
