--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/file-saver": "^2.0.5",
     "@types/next-auth": "^3.13.0",
     "husky": "^8.0.3",
