--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -20,18 +16,10 @@
     "incremental": true,
     "baseUrl": ".", // This sets the base path for module resolution
     "paths": {
-      "@/*": [
-        "./*"
-      ], // Ensure this is correct for resolving '@' aliases
-      "@/components/*": [
-        "./app/components/*"
-      ], // Map components correctly
-      "@/hooks/*": [
-        "./app/hooks/*"
-      ], // Map hooks correctly
-      "@/types/*": [
-        "./types/*"
-      ] // Map types correctly
+      "@/*": ["./*"], // Ensure this is correct for resolving '@' aliases
+      "@/components/*": ["./app/components/*"], // Map components correctly
+      "@/hooks/*": ["./app/hooks/*"], // Map hooks correctly
+      "@/types/*": ["./types/*"] // Map types correctly
     },
     "plugins": [
       {
@@ -43,9 +31,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "global.d.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
