--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
+    "react-toastify": "^10.0.5",
     "replicate": "^0.12.3",
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.2",
