--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "autoprefixer": "10.4.14",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
+    "cookies-next": "^4.2.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.5.6",
+    "lru-cache": "^11.0.1",
     "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "next": "14.1.1",
     "next-auth": "^4.24.8",
     "postcss": "8.4.31",
+    "rate-limiter-flexible": "^5.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -42,7 +46,8 @@
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
