--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "bcryptjs": "^2.4.3",
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "cookies-next": "^4.2.1",
